--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,3 +1,10 @@
+def remote = [:]
+    remote.name = 'test'
+    remote.host = '10.85.50.62'
+    remote.user = 'pankaj'
+    remote.password = 'redhat'
+    remote.allowAnyHosts = true
+    
 pipeline {
 
     agent any
@@ -5,12 +12,12 @@ pipeline {
       BUILD_USER = ''
       scannerHome = tool 'sonarqubeScanner'
       DOCKER_REGISTRY_URL = 'nexus.cloud.vssi.com:8083'
-      DOCKER_REPO = 'k8sdemo/frontend-app'
+      DOCKER_REPO = 'k8sdemo/frontend'
       APP_NAME = 'frontend'
-      master_pod = 'jmeter-master-1-dgv7t'
+      master_pod = 'jmeter-master-5-h7vnd'
       qg = ''
-    }
-
+    }           
+    
     stages {
       stage('Slack'){
         steps{
@@ -21,7 +28,7 @@ pipeline {
           color: 'good',
           message: "*${currentBuild.currentResult}:* Job ${env.JOB_NAME} build ${env.BUILD_NUMBER} \n More info at: ${env.BUILD_URL}"
         }
-      }//stage slack
+      }//stage slack   
 
 
       stage('Git') {
@@ -34,7 +41,7 @@ pipeline {
               }
             }
           }// stage scm
-
+                    
           stage('Static Code Analysis') {
             steps{
               script{
@@ -44,7 +51,7 @@ pipeline {
                   }
                 }// node close
                 qg = waitForQualityGate()
-
+          
                 if(qg.status != 'OK') {
                   //error “Quality Gate failure: ${qg.status}”
                   //echo "fail"
@@ -52,11 +59,11 @@ pipeline {
                   color: '#F01717',
                   message: "ERROR Job ${env.JOB_NAME} Code coverage threshold Please review in sonarqube project"
                 }//if condition
-
+                     
               }//script
             }//steps
           }//stage SAST
-
+                     
         }//par
       }//git close
 
@@ -70,29 +77,77 @@ pipeline {
                 }
             }
           }//unit test
-
+                     
           stage('Security Vulnerability Scan') {
             steps{
                 script{
-                  snykSecurity failOnIssues: false, projectName: 'cloud-app', snykInstallation: 'snyk', snykTokenId: 'snyk'
-
+                  snykSecurity failOnIssues: false, projectName: 'cloud-app', snykInstallation: 'snyk', snykTokenId: 'snyk' 
+                      
                 }
             }
           }//scan
-
+                    
         }//par
       }//stage test
+      
+       stage('Pause-1') {
+        input {
+          message "Wait..!!!"
+          id "job-pause6"
+        }
+        steps {
+          echo 'Pause'
+        }
+      }//stage
+ 
+      stage('Build Image ') {
+         
+        steps {
+         
+                
+                sshCommand remote: remote, command: "git clone http://git.cloud.vssi.com/cloudteam/frontend.git"
+                  sshCommand remote: remote, command: "cd frontend"
+                  sshCommand remote: remote, command: "docker build -t ${DOCKER_REPO}:v${BUILD_NUMBER}  ~/frontend"
+                  sshCommand remote: remote, command: "cd .."
+                  sshCommand remote: remote, command: "rm -rf frontend"
+        }
+      }//stage
+         
 
-      stage('Image Build and Push to Nexus ') {
+       stage('Push to Nexus ') {
+         
+        steps {
+         
+                
+                  sshCommand remote: remote, command: "docker tag ${DOCKER_REPO}:v${BUILD_NUMBER}   nexus.cloud.vssi.com:8083/${DOCKER_REPO}:v${BUILD_NUMBER} "
+                   sshCommand remote: remote, command: "docker login nexus.cloud.vssi.com:8083 -u admin -p redhat "
+                    sshCommand remote: remote, command: "docker push nexus.cloud.vssi.com:8083/${DOCKER_REPO}:v${BUILD_NUMBER} "
+        }
+      }//stage
+         
+    
+        
+     stage('Anchore Container Security') {
+        steps {
+          script {
+             sh 'echo "nexus.cloud.vssi.com:8083/${DOCKER_REPO}:v${BUILD_NUMBER} " > anchore_images '
+          
+              anchore bailOnFail: false, bailOnPluginFail: false, name: 'anchore_images'
+
+          }
+        }
+      }//stage 
+
+      stage('Helm Package & Deploy ') {
          agent {
                 kubernetes {
-                  label 'kanikobuild'
-                  defaultContainer 'kaniko'
+                  label 'helmbuild'
+                  defaultContainer 'helm'
                   yaml """
-            apiVersion: v1
+            apiVersion: v1          
             kind: Pod
             metadata:
-              name: kaniko
+              name: helm
             spec:
               containers:
               - env:
@@ -100,55 +155,63 @@ pipeline {
                   value: ${DOCKER_REPO}
                 - name: BUILD_NUMBER
                   value: ${env.BUILD_NUMBER}
-                name: kaniko
-                image: gcr.io/kaniko-project/executor:debug-539ddefcae3fd6b411a95982a830d987f4214251
+                name: helm
+                image: arfiqbal/helm-custom:v1
                 imagePullPolicy: Always
+                securityContext:
+                  privileged: true
+                  runAsUser: 0
                 command:
                 - cat
                 tty: true
-                volumeMounts:
-                  - name: docker-config
-                    mountPath: /kaniko/.docker
               serviceAccount: jenkin-sa
-              securityContext:
-                runAsUser: 0
-                privileged: true
-              volumes:
-                - name: docker-config
-                  configMap:
-                    name: docker-config
             """
                 }
               }
         steps {
-          container('kaniko') {
-             script{
-                        git credentialsId: 'gitlab', url: 'http://git.cloud.vssi.com/arif/test-app.git'
-
-                        sh '''
-                        /kaniko/executor --dockerfile `pwd`/Dockerfile --context `pwd` --insecure --cache=true --skip-tls-verify --destination=nexus.cloud.vssi.com:8083/${DOCKER_REPO}:${BUILD_NUMBER}
-                        '''
-                    }
+          container('helm') {
+            git credentialsId: 'gitlab', url: 'http://git.cloud.vssi.com/cloudteam/frontend.git '
+            sh '''
+              helm repo add nexus http://admin:redhat@nexus.cloud.vssi.com:8081/repository/helm/
+              cd helm/vodafone-app
+               helm package ./ --version ${BUILD_NUMBER}
+              curl -u admin:redhat http://nexus.cloud.vssi.com:8081/repository/helm/ --upload-file vodafone-app-${BUILD_NUMBER}.tgz
+              helm upgrade vodafone-app . --set image.tag=v${BUILD_NUMBER}  -n test
+            
+             
+            '''
           }
         }
       }//stage
-
-
-
-
-     stage('Anchore Container Security') {
+      
+      stage('Performance Test') {
         steps {
           script {
-             sh 'echo "nexus.cloud.vssi.com:8083/${DOCKER_REPO}:${BUILD_NUMBER} " > anchore_images '
+    	    openshift.withCluster() {
+              openshift.withProject('jenkins') {
+              
+               sh "sleep 5"
+                sh "oc cp frontend.jmx ${master_pod}:/jmeter"
+                sh "oc exec -ti ${master_pod} -- /bin/bash ./jmeter/load_test"         
+                sh "oc cp ${master_pod}:jmeter/frontend.jtl frontend.jtl"        
+                perfReport filterRegex: '', sourceDataFiles: 'frontend.jtl'
 
-              anchore bailOnFail: false, bailOnPluginFail: false, name: 'anchore_images'
-
-          }
+              }
+            }
+    			}
+        }
+      }//stage load test
+      
+       stage('Confirm Approval') {
+        input {
+          message "Deploy to production?"
+          id "simple-input"
+        }
+        steps {
+          echo 'Deploying'
         }
       }//stage
-
-
-
-
+       
+    
     } // stages
 } // pipeline
